Fix z-index for close button in pro shows modal

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -107,11 +107,12 @@ font-family: 'Berkshire Swash', cursive;
 	width:99%;
 	text-align: right;
 	margin-top:0%;
+	z-index:10000;
 	margin-bottom:-10%;
 	/*margin-right:10%;*/
 }
 .modal-content {
-	padding-top:12%;
+	/*padding-top:12%;*/
 }
 .closebt {
 	-webkit-transition: all 0.2s;
